--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "8.x-dev",
         "mockery/mockery": "^1.4",
+        "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.16",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.14",
