--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "dev-nitro-prep as 8.x-dev",
+        "laravel/framework": "8.x-dev",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.16",
         "phpunit/phpunit": "^9.3",
