--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,6 @@
             "email": "taylor@laravel.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "path",
-            "url": "./../laravel-framework"
-        }
-    ],
     "require": {
         "php": "^8.0",
         "illuminate/contracts": "^8.0",
@@ -27,7 +21,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "8.x-dev",
+        "laravel/framework": "^8.35",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.16",
         "phpunit/phpunit": "^9.3",
