--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0]
-        laravel: [^8.0]
+        laravel: [^8.35]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
@@ -32,8 +32,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer config --unset repositories.0
-          composer require laravel/framework:"dev-nitro-prep as 8.x-dev" --no-update
+          composer require "laravel/framework=${{ matrix.laravel }}" --no-update
           composer update --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
