--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, fileinfo, sockets
+          extensions: dom, curl, libxml, mbstring, zip, fileinfo, sockets, pdo_sqlite
           tools: composer:v2
           coverage: none
 
