--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0]
-        os: [ubuntu-20.04, windows-latest, macOS-latest]
+        os: [ubuntu-20.04, macOS-latest]
         laravel: [^8.35]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - OS ${{ matrix.os }}
@@ -33,7 +33,6 @@ jobs:
       - name: Install dependencies
         run: |
           composer require laravel/framework:"^8.35" --no-update
-
           composer update --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
