--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "orchestra/testbench": "^6.16",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.14",
-        "spiral/roadrunner": "^2.0"
+        "spiral/roadrunner": "^2.0",
+        "swoole/ide-helper": "^4.6"
     },
     "autoload": {
         "psr-4": {
