--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^8.37",
+        "laravel/framework": "^8.62",
         "laminas/laminas-diactoros": "^2.5",
+        "laravel/serializable-closure": "^1.0",
         "symfony/psr-http-message-bridge": "^2.0"
     },
     "require-dev": {
