--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0]
+        php: [8.0, 8.1]
         laravel: [^8.35]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
