--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
         "orchestra/testbench": "^6.16",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.14",
-        "spiral/roadrunner": "^2.0",
-        "swoole/ide-helper": "^4.6"
+        "spiral/roadrunner": "^2.0"
     },
     "bin": [
         "bin/roadrunner-worker",
