--- a/.github/workflows/tests-openswoole.yml
+++ b/.github/workflows/tests-openswoole.yml
@@ -1,4 +1,4 @@
-name: tests using open-swoole
+name: tests using openswoole
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, open-swoole
+          extensions: dom, curl, libxml, mbstring, zip, openswoole
           tools: composer:v2
           coverage: none
 
