--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,8 +15,9 @@ jobs:
       matrix:
         php: [8.0, 8.1]
         laravel: [^8.35]
+        driver: [swoole, openswoole]
 
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.driver }}
 
     steps:
       - name: Checkout code
@@ -26,7 +27,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, swoole
+          extensions: dom, curl, libxml, mbstring, zip, ${{ matrix.driver }}
           tools: composer:v2
           coverage: none
 
@@ -38,34 +39,3 @@ jobs:
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
         continue-on-error: ${{ matrix.php > 8 }}
-
-  openswoole:
-    runs-on: ubuntu-20.04
-
-    strategy:
-      fail-fast: true
-      matrix:
-        php: [8.0, 8.1]
-        laravel: [^8.35]
-
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, openswoole
-          tools: composer:v2
-          coverage: none
-
-      - name: Install dependencies
-        run: |
-          composer require laravel/framework:"^8.35" --no-update
-          composer update --prefer-dist --no-interaction --no-progress
-
-      - name: Execute tests
-        run: vendor/bin/phpunit --verbose
