--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,4 +38,4 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
-        continue-on-error: ${{ matrix.php > 8 }}
+        continue-on-error: ${{ matrix.php > 8 && matrix.driver === 'swoole' }}
