--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^8.70",
+        "laravel/framework": "^8.70|^9.0",
         "laminas/laminas-diactoros": "^2.5",
         "laravel/serializable-closure": "^1.0",
         "symfony/psr-http-message-bridge": "^2.0"
@@ -24,7 +24,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^5.3",
-        "orchestra/testbench": "^6.16",
+        "orchestra/testbench": "^6.16|^7.0",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.14",
         "spiral/roadrunner": "^2.0"
@@ -44,9 +44,6 @@
         }
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        },
         "laravel": {
             "providers": [
                 "Laravel\\Octane\\OctaneServiceProvider"
