--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.2",
+        "nunomaduro/collision": "^5.10|^6.0",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.16|^7.0",
         "phpunit/phpunit": "^9.3",
