--- a/.github/release.yml
+++ b/.github/release.yml
@@ -8,9 +8,10 @@ changelog:
   categories:
     - title: Added
       labels:
-        - enhancement
+        - feature
     - title: Changed
       labels:
+        - enhancement
         - "*"
     - title: Deprecated
       labels:
