Fix carbon locale when setting it via app locale setter

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,15 @@
         "laravel/framework": "^8.81|^9.0",
         "laminas/laminas-diactoros": "^2.5",
         "laravel/serializable-closure": "^1.0",
+        "nesbot/carbon": "dev-master as 2.53.1",
         "symfony/psr-http-message-bridge": "^2.0"
     },
+    "repositories": [
+        {
+            "type": "github",
+            "url": "https://github.com/briannesbitt/Carbon"
+        }
+    ],
     "require-dev": {
         "guzzlehttp/guzzle": "^7.2",
         "mockery/mockery": "^1.4",
