Adds Laravel 10 support

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^8.83.26|^9.38.0",
+        "laravel/framework": "^8.83.26|^9.38.0|^10.0",
         "laminas/laminas-diactoros": "^2.5",
         "laravel/serializable-closure": "^1.0",
         "nesbot/carbon": "^2.60",
@@ -25,7 +25,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^5.10|^6.0",
-        "orchestra/testbench": "^6.16|^7.0",
+        "orchestra/testbench": "^6.16|^7.0|^8.0",
         "phpunit/phpunit": "^9.3",
         "spiral/roadrunner": "^2.8.2"
     },
