--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: true
       matrix:
         php: ['8.0', 8.1, 8.2]
-        laravel: [8, 9]
+        laravel: [8, 9, 10]
         driver: [swoole, openswoole]
         exclude:
           - php: 8.2
