Require "laravel/framework" using `--dev` for build
The project `composer.json` already contain `laravel/framework` under `require` and having this line replace the "locked" supported versions.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:^${{ matrix.laravel }}" --no-update
+          composer require "laravel/framework:^${{ matrix.laravel }}" --dev --no-update
           composer update --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
