--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,14 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.9",
+        "laravel/scout": "^9.8",
+        "laravel/socialite": "^5.6",
+        "livewire/livewire": "^2.12",
         "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^5.10|^6.0|^7.0",
         "orchestra/testbench": "^6.16|^7.0|^8.0",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.3",
         "spiral/roadrunner": "^2.8.2"
     },
