--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -9,3 +9,4 @@ parameters:
   ignoreErrors:
     - "#Unsafe usage of new static\\(\\)#"
     - "#\\(void\\) is used.#"
+    - "#Function Swoole\\\\Coroutine\\\\run not found.#"
