--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ['8.0', 8.1, 8.2]
-        laravel: [8, 9, 10]
+        php: [8.1, 8.2]
+        laravel: [10]
         driver: [swoole, openswoole]
         exclude:
           - php: 8.0
