--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yml
@@ -29,11 +29,12 @@ body:
   - type: dropdown
     attributes:
       label: What server type are you using?
-      multiple: true
       options:
         - Open Swoole
         - Roadrunner
         - Swoole
+    validations:
+      required: true
   - type: input
     attributes:
       label: Server Version
