--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         bootstrap="vendor/autoload.php"
-         colors="true"
-         convertDeprecationsToExceptions="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
->
+<phpunit colors="true">
     <testsuites>
         <testsuite name="Feature">
             <directory suffix="Test.php">./tests</directory>
