--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit colors="true">
     <testsuites>
-        <testsuite name="Feature">
+        <testsuite name="Tests">
             <directory suffix="Test.php">./tests</directory>
+        </testsuite>
+        <testsuite name="Feature">
+            <directory suffix="Test.php">./tests/Feature</directory>
         </testsuite>
     </testsuites>
 
