--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,3 +10,4 @@ parameters:
     - "#Unsafe usage of new static\\(\\)#"
     - "#\\(void\\) is used.#"
     - "#Function Swoole\\\\Coroutine\\\\run not found.#"
+    - "#Function frankenphp_handle_request not found.#"
