docs: update README and composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "laravel/octane",
     "description": "Supercharge your Laravel application's performance.",
-    "keywords": ["laravel", "octane", "roadrunner", "swoole"],
+    "keywords": ["laravel", "octane", "roadrunner", "swoole", "frankenphp"],
     "license": "MIT",
     "support": {
         "issues": "https://github.com/laravel/octane/issues",
