--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         php: [8.1, 8.2, 8.3]
         laravel: [10]
-        driver: [swoole, openswoole]
+        driver: [swoole-5.1.0, openswoole]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.driver }}
 
