--- a/composer.json
+++ b/composer.json
@@ -15,23 +15,23 @@
     ],
     "require": {
         "php": "^8.1.0",
-        "laravel/framework": "^10.10.1",
+        "laravel/framework": "^10.10.1|^11.0",
         "laminas/laminas-diactoros": "^3.0",
         "laravel/serializable-closure": "^1.3.0",
         "nesbot/carbon": "^2.66.0",
-        "symfony/psr-http-message-bridge": "^2.2.0"
+        "symfony/psr-http-message-bridge": "^2.2.0|^6.4|^7.0"
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.6.1",
-        "inertiajs/inertia-laravel": "^0.6.9",
-        "laravel/scout": "^10.2.1",
-        "laravel/socialite": "^5.6.1",
-        "livewire/livewire": "^2.12.3",
+        "inertiajs/inertia-laravel": "^0.6.9|^1.0",
+        "laravel/scout": "^10.2.1|dev-develop",
+        "laravel/socialite": "^5.6.1|dev-develop",
+        "livewire/livewire": "^2.12.3|^3.0|dev-feat/l11",
         "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^6.4.0|^7.5.2",
-        "orchestra/testbench": "^8.5.2",
+        "nunomaduro/collision": "^6.4.0|^7.5.2|^8.0",
+        "orchestra/testbench": "^8.5.2|^9.0",
         "phpstan/phpstan": "^1.10.15",
-        "phpunit/phpunit": "^10.1.3",
+        "phpunit/phpunit": "^10.4",
         "spiral/roadrunner-http": "^3.0.1",
         "spiral/roadrunner-cli": "^2.5.0"
     },
@@ -75,6 +75,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
