--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,9 @@ jobs:
         php: [8.1, 8.2, 8.3]
         laravel: [10, 11]
         driver: [swoole, openswoole]
+        exclude:
+          - php: 8.1
+            laravel: 10
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.driver }}
 
