--- a/src/Commands/stubs/Caddyfile
+++ b/src/Commands/stubs/Caddyfile
@@ -26,9 +26,10 @@
 		# Mercure config is injected here
 		{$CADDY_SERVER_EXTRA_DIRECTIVES}
 
-
 		php_server {
 			index frankenphp-worker.php
+			# Required for the public/storage/ dir
+			resolve_root_symlink
 		}
 	}
 }
