--- a/src/Commands/stubs/Caddyfile
+++ b/src/Commands/stubs/Caddyfile
@@ -8,7 +8,7 @@
 
 {$SERVER_NAME} {
 	log {
-		# Redact the authorization query parameter that can be set by Mercure
+		# Redact the authorization query parameter that can be set by Mercure...
 		format filter {
 			wrap console
 			fields {
@@ -23,12 +23,12 @@
 		root * {$APP_PUBLIC_PATH}
 		encode zstd gzip
 
-		# Mercure config is injected here
+		# Mercure configuration is injected here...
 		{$CADDY_SERVER_EXTRA_DIRECTIVES}
 
 		php_server {
 			index frankenphp-worker.php
-			# Required for the public/storage/ dir
+			# Required for the public/storage/ directory...
 			resolve_root_symlink
 		}
 	}
