--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yml
@@ -29,6 +29,7 @@ body:
     attributes:
       label: What server type are you using?
       options:
+        - FrankenPHP
         - Open Swoole
         - Roadrunner
         - Swoole
