--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],
     "require": {
         "php": "^8.1.0",
-        "laravel/framework": "^10.10.1",
         "laminas/laminas-diactoros": "^3.0",
+        "laravel/framework": "^10.10.1",
         "laravel/serializable-closure": "^1.3.0",
         "nesbot/carbon": "^2.66.0",
         "symfony/psr-http-message-bridge": "^2.2.0"
@@ -32,8 +32,9 @@
         "orchestra/testbench": "^8.5.2",
         "phpstan/phpstan": "^1.10.15",
         "phpunit/phpunit": "^10.1.3",
+        "spiral/roadrunner-cli": "^2.5.0",
         "spiral/roadrunner-http": "^3.0.1",
-        "spiral/roadrunner-cli": "^2.5.0"
+        "swoole/ide-helper": "^5.1"
     },
     "bin": [
         "bin/roadrunner-worker",
@@ -75,6 +76,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
