--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
