--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         "guzzlehttp/guzzle": "^7.6.1",
         "inertiajs/inertia-laravel": "^0.6.9|^1.0",
         "laravel/scout": "^10.2.1|dev-develop",
-        "laravel/socialite": "^5.6.1|dev-develop",
-        "livewire/livewire": "^2.12.3|^3.0|dev-feat/l11",
+        "laravel/socialite": "^5.6.1",
+        "livewire/livewire": "^2.12.3|^3.0",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^6.4.0|^7.5.2|^8.0",
         "orchestra/testbench": "^8.5.2|^9.0",
