--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require-dev": {
         "guzzlehttp/guzzle": "^7.6.1",
         "inertiajs/inertia-laravel": "^0.6.9|^1.0",
-        "laravel/scout": "^10.2.1|dev-develop",
+        "laravel/scout": "^10.2.1",
         "laravel/socialite": "^5.6.1",
         "livewire/livewire": "^2.12.3|^3.0",
         "mockery/mockery": "^1.5.1",
