Listen Caddy admin port on all interfaces

--- a/src/Commands/stubs/Caddyfile
+++ b/src/Commands/stubs/Caddyfile
@@ -1,7 +1,7 @@
 {
 	{$CADDY_GLOBAL_OPTIONS}
 
-	admin localhost:{$CADDY_SERVER_ADMIN_PORT}
+	admin :{$CADDY_SERVER_ADMIN_PORT}
 
 	frankenphp {
 		worker "{$APP_PUBLIC_PATH}/frankenphp-worker.php" {$CADDY_SERVER_WORKER_COUNT}
