--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.1, 8.2, 8.3]
-        laravel: [10, 11]
+        php: [8.2, 8.3]
+        laravel: [11]
         driver: [swoole, openswoole]
         exclude:
           - php: 8.1
